// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should create action creators 1`] = `
Object {
  "type": "RANDOM_NAME/START",
}
`;

exports[`should create action creators 2`] = `
Object {
  "payload": Object {
    "hello": "there",
  },
  "type": "RANDOM_NAME/FINISH",
}
`;

exports[`should create action creators 3`] = `
Object {
  "error": "An error occurred",
  "type": "RANDOM_NAME/ERROR",
}
`;

exports[`should create action creators 4`] = `
Object {
  "error": "Something went wrong",
  "type": "RANDOM_NAME/ERROR",
}
`;

exports[`should create action creators 5`] = `
Object {
  "type": "RANDOM_NAME/RESET",
}
`;

exports[`should create base types 1`] = `
Object {
  "ERROR": "RANDOM_NAME/ERROR",
  "FINISH": "RANDOM_NAME/FINISH",
  "RESET": "RANDOM_NAME/RESET",
  "START": "RANDOM_NAME/START",
}
`;

exports[`should create base types 2`] = `
Object {
  "ERROR": "ANOTHER_NAME/ERROR",
  "FINISH": "ANOTHER_NAME/FINISH",
  "RESET": "ANOTHER_NAME/RESET",
  "START": "ANOTHER_NAME/START",
}
`;

exports[`should create duck 1`] = `
Object {
  "error": null,
  "isLoading": false,
  "payload": Object {
    "data": Object {
      "count": 1,
    },
  },
}
`;

exports[`should create duck 2`] = `false`;

exports[`should create duck 3`] = `
Object {
  "data": Object {
    "count": 1,
  },
}
`;

exports[`should create duck 4`] = `
Object {
  "count": 1,
}
`;

exports[`should create duck 5`] = `null`;

exports[`should create duck 6`] = `1`;

exports[`should create reducer 1`] = `
Object {
  "error": null,
  "isLoading": false,
  "payload": null,
}
`;

exports[`should create reducer 2`] = `
Object {
  "error": null,
  "isLoading": false,
  "payload": null,
}
`;

exports[`should create reducer 3`] = `
Object {
  "error": null,
  "isLoading": true,
  "payload": null,
}
`;

exports[`should create reducer 4`] = `
Object {
  "error": null,
  "isLoading": false,
  "payload": Object {
    "it": "works",
  },
}
`;

exports[`should create reducer 5`] = `
Object {
  "error": "Something went wrong",
  "isLoading": false,
  "payload": null,
}
`;

exports[`should create reducer 6`] = `
Object {
  "error": null,
  "isLoading": false,
  "payload": null,
}
`;

exports[`should create selectors 1`] = `
Object {
  "error": "It failed!",
  "isLoading": false,
  "payload": Object {
    "data": Object {
      "hello": "there",
    },
  },
}
`;

exports[`should create selectors 2`] = `false`;

exports[`should create selectors 3`] = `
Object {
  "data": Object {
    "hello": "there",
  },
}
`;

exports[`should create selectors 4`] = `
Object {
  "hello": "there",
}
`;

exports[`should create selectors 5`] = `"It failed!"`;

exports[`should create selectors 6`] = `"Loaded"`;

exports[`should create selectors 7`] = `"Loaded"`;
